# ASIO

./: CMakeLists.txt
scripts/: build-clang.sh  build-mingw.sh
src/: Client.cpp  Client.hpp  ClientApp.cc  EchoClient.cc  EchoServer.cc  Header.hpp  Message.cpp  Message.hpp  Server.cpp  Server.hpp  ServerApp.cc
src/utils/: MessageEnums.hpp  MessageLayout.cpp  MessageLayout.hpp  MessageLoader.cpp  MessageLoader.hpp  MessageVisitor.hpp  Utility.hpp
